# loki-mcp

./: Cargo.toml  Dockerfile  README.md  config.example.toml  default.nix
.github/workflows/: build.yml  release.yml
src/: cache.rs  config.rs  error.rs  guardrails.rs  lib.rs  main.rs  mcp.rs  metrics.rs  rate_limit.rs  recent_actions.rs  response.rs  server.rs  time.rs
src/loki/: auth.rs  client.rs  types.rs
src/tools/: analysis.rs  discovery.rs  mod.rs  query.rs  utility.rs
tests/: loki_client_it.rs  tool_router_it.rs
tests/support/: loki.rs
